# GreenVRP_Engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BRANCH_STRATEGY.md  CHANGELOG.md  CODE_STYLE.md  DEVELOPER.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  REDIS_JOB_MANAGER_GUIDE.md  SECURITY.md  app.py  benchmark_results.csv  deploy-jdcloud.md  docker-compose.yml  logging_config.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  start.py  start_enterprise_ui.py  start_fast.py  start_optimized.py  test_api_integration.py  test_api_security.py  views.py  web_app.py  项目评估报告.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.trae/documents/: decoupling-optimization-plan.md  frontend-redesign-plan.md  memory-safety-improvements.md  project-standardization-plan.md  security-and-quality-scan-plan.md
.trae/specs/comprehensive-bug-scan-analysis/: checklist.md  spec.md  tasks.md
.zcode/plans/: plan-sess_621dc5fc-46cd-4dfd-ba71-41de823f872b.md
analysis/: __init__.py  comparison.py  sensitivity.py  strategy_eval.py
api/: __init__.py  dependencies.py  main.py
api/middleware/: __init__.py  security.py
api/routers/: __init__.py  auth.py  health.py  scenarios.py  solver.py
api/schemas/: __init__.py  request.py  response.py
api/security/: __init__.py  auth.py  rate_limit.py
api/services/: __init__.py  redis_job_manager.py  solver_service.py
benchmarks/: README.md
benchmarks/api/: benchmark_api.py
benchmarks/backend/: bench_cache_memory.py  profile_solver.py
benchmarks/frontend/: lighthouse.mjs
config/: __init__.py  constants.py  security.py  settings.py  vehicles.py
core/: __init__.py  cost.py  distance.py  interfaces.py  solver.py
data/: mock_customers.csv
data_types/: __init__.py  cost.py  customer.py  solution.py  vehicle.py
deploy/: Caddyfile  nginx.conf
exceptions/: __init__.py  errors.py
frontend/: README.md  app.py  config.py
frontend/components/: __init__.py  chart_view.py  map_view.py
models/: __init__.py  customer.py  database.py  interfaces.py  scenario.py  solution.py  vehicle_config.py
optimization/: __init__.py  carbon_aware.py  dynamic.py  multi_objective.py  route_optimize.py
reports/: GreenVRP_Security_Quality_Scan_Report.md  bug_fix_report.md  generate_scan_report.py  manual_api_test.json  memory_safety_validation.md  mypy_scan.txt  pip_audit.json  pytest_report.txt
reports/quality/: mypy-report.txt  radon-cyclomatic-detail.txt  radon-cyclomatic-full.txt  radon-cyclomatic.txt  radon-maintainability.txt  radon-raw.txt  ruff-concise.txt  ruff-full.txt  ruff-report-clean.json  ruff-report.json  ruff-report.txt  ruff-single.txt  ruff-single2.txt
reports/security/: bandit-report.json  bandit-report.txt  manual-dast.json  pip-audit-environment.json  pip-audit-environment.txt  pip-audit-requirements.json  requirements-utf8bom.txt
tests/: conftest.py
tests/fixtures/: __init__.py  customers.py  mocks.py
tests/integration/: test_api_integration.py  test_api_security.py  test_api_solve_flow.py  test_multi_module_flow.py  test_scenario_crud.py
tests/performance/: benchmark.py
tests/unit/: test_logging_config.py  test_views.py
tracking/: __init__.py  eta_calculator.py  geofencing.py  gps_simulator.py  position_tracker.py
utils/: __init__.py  geo.py  security.py  time.py  validation.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/reports/: npm_audit.json  npm_test_report_v2.txt
web/src/: index.css  main.tsx
web/src/lib/: api.ts  (+7 more)
(+111 files in other folders)
