[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenvrp-engine"
version = "2.0.0"
description = "绿色物流路径优化引擎"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["vrp", "routing", "optimization", "green-logistics", "carbon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "streamlit>=1.28.0",
    "streamlit-folium>=0.15.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "folium>=0.14.0",
    "plotly>=5.15.0",
    "ortools>=9.7.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.0",
    "httpx>=0.24.0",
    "msgpack>=1.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
    "coverage>=7.0.0",
]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "greenvrp-engine[test]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "config*", "optimization*", "analysis*", "utils*", "exceptions*", "models*", "data_types*", "frontend*", "tracking*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["."]
exclude = [
    ".venv",
    "venv",
    "node_modules",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "reports/security",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # FastAPI Depends() in default arguments is idiomatic
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
exclude = [
    "frontend",
    "benchmarks",
    "tests",
    ".venv",
    "venv",
    "node_modules",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -q --strict-markers"
markers = [
    "integration: marks tests as integration tests (may be slower)",
    "slow: marks tests as slow (deselect with '-m not slow')",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/__pycache__/*",
    "start*.py",
    "web_app.py",
    "frontend/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
